--- a/style.css
+++ b/style.css
@@ -76,10 +76,82 @@
 .bg6{
     background-image: url(image/bg6.jpg);
     background-size: cover;
+       background: linear-gradient(rgba(255, 120, 149, 0.66), rgba(255, 120, 149, 0.646)),
+                  url("image/bg6.jpg") center/cover no-repeat;
+      color: #fff;
 }
 
 
+.cg{
+        color: #919dab;
+        
 
+}
+
+.bgh{
+        background-color: #f3f2f4;
+    max-width: 300px;
+    
+padding: 35px;
+border-radius: 6px;
+
+}
+.hp{
+margin-top: 200px;
+}
+
+.tb{
+        color: #5fcac7;
+
+}
+
+.bg8{
+    background-image: url(image/bg8);
+    background-size: cover;
+     background:
+    linear-gradient(rgba(0, 0, 0, 0.769), rgba(0, 0, 0, 0.792)),
+    url("image/bg8") center/cover no-repeat;
+  display: flex;
+  align-items: center;
+  color: #fff;
+}
+
+.inpt{
+    border: 2px solid #ebeaed;
+    opacity: .4;
+    font-weight: 700;
+    font-size: 20px;
+    color: #ffffff;
+    background-color: #ffffff !important;
+    background-color: transparent !important;
+    border-radius: 30px;
+    
+}
+
+.btnc4{
+    border-radius: 30px;
+}
+
+
+.il{
+    margin-left: 15px;
+    margin-right: 15px;
+    width: 40px;
+    height: 40px;
+    border: 2px solid rgba(255, 255, 255, 0.3);
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: all 0.25s ease;
+}
+
+.il:hover{
+    border-color: #fff;
+}
+.li{
+    unicode-bidi: isolate;
+}
 
 @media screen and (max-width:767px) {
     .fh{
@@ -97,5 +169,18 @@
     .ho{
         font-size: 200%;
     }
-    
+    .hp{
+        margin-top:0px;
+    }
+}
+
+@media screen and (max-width:991px){
+    .fl{
+        width: 200px;
+    }
+    .bl{
+    display: none;}
+    .bg8{
+        width: 100%;
+    }
 }
