--- a/style.css
+++ b/style.css
@@ -160,7 +160,10 @@ margin-top: 200px;
     unicode-bidi: isolate;
 }
 
-
+.bgcb{
+        
+    background-color: rgba(0, 0, 0, 0.813) !important;    
+}
 @media screen and (max-width:767px) {
     .fh{
         font-size: larger;
@@ -180,6 +183,9 @@ margin-top: 200px;
     .hp{
         margin-top:0px;
     }
+.imgw{
+    width: 100px !important;
+}
 }
 
 @media screen and (max-width:991px){
@@ -191,4 +197,8 @@ margin-top: 200px;
     .bg8{
         width: 100%;
     }
+
+
 }
+
+
